2006-08-16  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/plaf/basic/BasicTabbedPaneUI.java:
	(MouseHandler.mousePressed): Fixed indentation, intercept clicks on
	disabled tabs, do proper revalidation in WRAP_TAB_LAYOUT mode.

2006-08-16  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/WrappedPlainView.java:
	(WrappedLine.modelToView): Provide variable pos as argument and not a fixed value.
	(calculateBreakPosition): Add p0 to return value.

2006-08-15  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(MouseHandler.selectedOnPress): New field.
	(MouseHandler.handleEvent): New helper method for handling
	selection and start/stop editing for mouse events.
	(MouseHandler.mouseDragged): Commented as no-op method.
	(MouseHandler.mouseMoved): Commented as no-op method.
	(MouseHandler.mousePressed): Use handleEvent() to handle
	selection and editing handling.
	(MouseHandler.mouseReleased): Use handleEvent() to handle
	selection and editing handling.
	(MouseInputHandler.MouseInputHandler): Register itself
	as mouse listener on source. Redispatch event to
	destination.
	(MouseInputHandler.dispatch): New helper method.
	(MouseInputHandler.mouseClicked): Dispatch event.
	(MouseInputHandler.mouseDragged): Dispatch event.
	(MouseInputHandler.mouseEntered): Stop dispatching
	if dragging stopped.
	(MouseInputHandler.mouseExited): Stop dispatching
	if dragging stopped.
	(MouseInputHandler.mouseMoved): Stop dispatching.
	(MouseInputHandler.mousePressed): Marked as no-op.
	(MouseInputHandler.mouseReleased): Dispatch and stop
	dispatching afterwards.
	(MouseInputHandler.removeFromSource): Implemented.
	(PropertyChangeHandler.propertyChange): Also handle
	editable property changes by calling setEditable().
	(SelectionModelPropertyChangeHandler.propertyChange):
	Reset row selection.
	(startEditTimer): Removed.
	(setCellEditor): Call updateEditor().
	(setEditable): Call updateEditor().