@@ -39,15 +39,24 @@ exception statement from your version. */
 package gnu.classpath.examples.swing;
 
 import java.awt.BorderLayout;
+import java.awt.Color;
 import java.awt.GridLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.MouseAdapter;
+import java.awt.event.MouseEvent;
 
 import javax.swing.JButton;
 import javax.swing.JComponent;
 import javax.swing.JFrame;
+import javax.swing.JLabel;
+import javax.swing.JMenu;
+import javax.swing.JMenuItem;
 import javax.swing.JPanel;
+import javax.swing.JPopupMenu;
+import javax.swing.JScrollPane;
 import javax.swing.JTabbedPane;
+import javax.swing.JTextArea;
 import javax.swing.SwingConstants;
 import javax.swing.SwingUtilities;
 
@@ -55,6 +64,10 @@ public class TabbedPaneDemo
   extends JPanel
   implements ActionListener
 {
+  static Color[] colors = { Color.BLUE, Color.CYAN, Color.GRAY, Color.GREEN,
+                            Color.MAGENTA, Color.ORANGE, Color.PINK,
+                            Color.ORANGE, Color.RED, Color.BLUE, Color.YELLOW
+                          };
   TabbedPaneDemo()
   {
     super();
@@ -64,25 +77,123 @@ public class TabbedPaneDemo
   private void createContent()
   {
     JPanel p = new JPanel();
-    p.setLayout(new GridLayout(2, 2));
-    JTabbedPane tabs1 = new JTabbedPane(SwingConstants.TOP);
-    tabs1.add("Top Item 1", new JButton("Content: Top Item 1"));
-    tabs1.add("Top Item 2", new JButton("Content: Top Item 2"));
-    JTabbedPane tabs2 = new JTabbedPane(SwingConstants.LEFT);
-    tabs2.add("Left Item 1", new JButton("Content: Left Item 1"));
-    tabs2.add("Left Item 2", new JButton("Content: Left Item 2"));
-    JTabbedPane tabs3 = new JTabbedPane(SwingConstants.BOTTOM);
-    tabs3.add("Bottom Item 1", new JButton("Content: Bottom Item 1"));
-    tabs3.add("Bottom Item 2", new JButton("Content: Bottom Item 2"));
-    JTabbedPane tabs4 = new JTabbedPane(SwingConstants.RIGHT);
-    tabs4.add("Right Item 1", new JButton("Content: Right Item 1"));
-    tabs4.add("Right Item 2", new JButton("Content: Right Item 2"));
-    p.add(tabs1);
-    p.add(tabs2);
-    p.add(tabs3);
-    p.add(tabs4);
+    p.setLayout(new GridLayout(1, 1));
+    
+    int COUNT = 25;
+    JTabbedPane tp = createTabbedPane(SwingConstants.TOP, "top", COUNT);
+    p.add(tp);
+    
+    final JPopupMenu popup = new JPopupMenu();
+
+    JMenu menu = new JMenu("directions");
+    menu.add(createPlacementChangingMenuItem("top",
+                                             SwingConstants.TOP,
+                                             tp));
+    
+    menu.add(createPlacementChangingMenuItem("bottom",
+                                             SwingConstants.BOTTOM,
+                                             tp));
+    
+    menu.add(createPlacementChangingMenuItem("left",
+                                             SwingConstants.LEFT,
+                                             tp));
+    
+    menu.add(createPlacementChangingMenuItem("right",
+                                             SwingConstants.RIGHT,
+                                             tp));
+    popup.add(menu);
+
+    menu = new JMenu("tab layout");
+    menu.add(createLayoutPolicyChangingMenuItem("wrapping tabs",
+                                                JTabbedPane.WRAP_TAB_LAYOUT,
+                                                tp));
+    
+    menu.add(createLayoutPolicyChangingMenuItem("scrolling tabs",
+                                                JTabbedPane.SCROLL_TAB_LAYOUT,
+                                                tp));
+    popup.add(menu);
+    
+    tp.addMouseListener(new MouseAdapter()
+                       {
+                         public void mousePressed(MouseEvent e) {
+                           showPopup(e);
+                         }
+                         
+                         public void mouseReleased(MouseEvent e) {
+                           showPopup(e);
+                         }
+                         
+                         void showPopup(MouseEvent e) {
+                           if (e.isPopupTrigger()) {
+                             popup.show(e.getComponent(), e.getX(), e.getY());
+                           }
+                         }
+                       });
+    
     setLayout(new BorderLayout());
     add(p, BorderLayout.CENTER);
+    
+  }
+  
+  private JMenuItem createPlacementChangingMenuItem(String t,
+                                                    final int v,
+                                                    final JTabbedPane dst)
+  {
+    JMenuItem item = new JMenuItem(t);
+    
+    item.addActionListener(new ActionListener()
+                           {
+                             public void actionPerformed(ActionEvent ae)
+                             {
+                              dst.setTabPlacement(v);
+                             }
+                           });
+  
+    return item;
+  }
+  
+  private JMenuItem createLayoutPolicyChangingMenuItem(String t,
+                                                       final int v,
+                                                       final JTabbedPane dst)
+  {
+    JMenuItem item = new JMenuItem(t);
+    
+    item.addActionListener(new ActionListener()
+                           {
+                             public void actionPerformed(ActionEvent ae)
+                             {
+                              dst.setTabLayoutPolicy(v);
+                             }
+                           });
+  
+    return item;
+  }
+  
+  private JTabbedPane createTabbedPane(int direction, String name, int count)
+  {
+    JTabbedPane pane = new JTabbedPane(direction);
+    
+    for(int i = 0; i< count; i++)
+      {
+        pane.addTab(name + " " + i, createTabContent(name + " " + i));
+        if (Math.random() >= 0.75)
+          pane.setEnabledAt(i, false);
+      }
+  
+    return pane;
+  }
+  
+  private JPanel createTabContent(String name)
+  {
+    JTextArea ta;
+    JPanel panel = new JPanel();
+    panel.add(new JLabel(name));
+    panel.add(new JButton(name));
+    panel.add(new JScrollPane(ta = new JTextArea(5, 5)));
+    
+    ta.setBackground(colors[(int) (Math.random() * colors.length)]);
+    
+    return panel;
   }
 
   public void actionPerformed(ActionEvent e) 
